--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "core-decorators": "^0.20.0"
   }
 }
