--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
+    "javascript-state-machine": "^3.1.0",
+    "jquery": "^3.4.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "core-decorators": "^0.20.0"
+    "core-decorators": "^0.20.0",
+    "javascript-state-machine": "^3.1.0"
   }
 }
