--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.12.1",
     "javascript-state-machine": "^3.1.0",
     "jquery": "^3.4.1",
     "webpack": "^4.42.0",
